# combinatorics

./: Cargo.toml  README.md  alternate.txt  benchmark-results.txt  combination_count.rb
benches/: bench.rs
src/: lib.rs
tests/: lib.rs
